src/main/webapp/imcms/css/imcms-text_editor.css
.imcms-editor-area__text-toolbar .text-toolbar-wrapper,
.mce-tinymce.mce-tinymce-inline.mce-container.mce-panel {
    border: 2px solid rgba(0, 149, 217, 0.58) !important; /* this should be important, inline styles need to be overwritten */
    border-bottom-width: 1px !important; /* this should be important, inline styles need to be overwritten */
    width: 100% !important; /* this should be important, inline styles need to be overwritten */
    border-radius: 5px 5px 0 0;
}

.mce-btn-group {
    float: left;
}

.imcms-editor-area__text-toolbar {
    border-radius: 5px 5px 0 0;
}

.imcms-editor-area__text-toolbar,
.imcms-editor-area__text-toolbar [class^="mce"] {
    padding: 0;
}

.imcms-editor-area__text-toolbar .text-toolbar__button {
    display: inline-block;
    width: 24px;
}

.imcms-editor-area__text-toolbar .text-toolbar__button--active {
    cursor: not-allowed;
    background-color: #ebebeb;
    -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
    -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
    border-color: #ccc;
}

.imcms-editor-area__text-toolbar .text-toolbar__button--active,
.imcms-editor-area__text-toolbar .text-toolbar__button--disabled {
    opacity: .4;
}

.imcms-editor-area__text-toolbar .text-toolbar__button .text-toolbar__icon {
    height: 20px;
}

.text-toolbar-wrapper {
    background-color: white;
    display: none;
    padding-top: 1px;
    padding-left: 1px;
    height: 25px;
}

.text-toolbar__button {
    cursor: pointer;
    border: 1px solid transparent;
}

.text-toolbar__button:hover {
    background-color: #f2f2f2;
    border-color: #ccc;
}

.imcms-editor-area--active .text-toolbar-wrapper {
    display: inline-flex;
}

.imcms-editor-area__text-toolbar .mce-i-imcms-image--in-text-editor-icon {
    background: url("../images/text_editor/ic_images.png") no-repeat;
}

.imcms-editor-area__text-toolbar .mce-i-switch-to-html-mode-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-icon {
    padding-top: 2px;
}

.imcms-editor-area__text-toolbar .text-toolbar__button .html-validation-button__icon.imcms-w3c-text-validation-processing-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-processing-icon {
    background: url("../images/text_editor/ic_loader.gif") no-repeat center;
}

.imcms-editor-area__text-toolbar .text-toolbar__button .html-validation-button__icon.imcms-w3c-text-validation-valid-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-valid-icon {
    background: url("../images/text_editor/ic_valid.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .text-toolbar__button .html-validation-button__icon.imcms-w3c-text-validation-invalid-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-invalid-icon {
    background: url("../images/text_editor/ic_invalid.png") no-repeat center;
}

.text-editor-fullscreen-button__icon {
    background: url("../images/text_editor/ic_fullscreen.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .mce-i-imcms-discard-changes-icon,
.imcms-editor-area__text-toolbar .text-editor-discard-changes-button__icon {
    background: url("../images/text_editor/ic_cancel.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .mce-i-html-filtering-policy-icon,
.imcms-editor-area__text-toolbar .html-filtering-policy-button__icon {
    background: url("../images/text_editor/ic_filter.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .mce-i-imcms-discard-changes-icon {
    margin-top: 1px;
}

.text-editor-save-button__icon {
    background: url("../images/text_editor/ic_save.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .text-history-button__icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-text-history-icon {
    background: url("../images/text_editor/text_history.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .switch-to-plain-text-button__icon,
.imcms-editor-area__text-toolbar .mce-i-switch-to-plain-text-icon {
    background: url("../images/text_editor/ic_plain_text.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .switch-to-html-mode-button__icon,
.imcms-editor-area__text-toolbar .mce-i-switch-to-html-mode-icon {
    background: url("../images/text_editor/ic_html.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .switch-to-text-editor-button__icon,
.imcms-editor-area__text-toolbar .mce-i-switch-to-text-editor-icon {
    background: url("../images/text_editor/ic_text_editor.png") no-repeat center;
}

.imcms-editor-area__text-toolbar .mce-i-switch-to-text-editor-icon,
.imcms-editor-area__text-toolbar .mce-i-switch-to-plain-text-icon,
.imcms-editor-area__text-toolbar .text-toolbar__button .text-toolbar__icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-image--in-text-editor-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-processing-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-valid-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-invalid-icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-discard-changes-icon,
.imcms-editor-area__text-toolbar .mce-i-html-filtering-policy-icon,
.imcms-editor-area__text-toolbar .text-history-button__icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-text-history-icon {
    padding-top: 2px;
    background-size: 16px;
}

.imcms-editor-area__text-toolbar .text-toolbar__button .html-validation-button__icon.imcms-w3c-text-validation-valid-icon,
.imcms-editor-area__text-toolbar .text-toolbar__button .html-validation-button__icon.imcms-w3c-text-validation-invalid-icon {
    background-size: 20px;
}

.imcms-editor-area__text-toolbar .text-toolbar__button .html-validation-button__icon,
.imcms-editor-area__text-toolbar .mce-i-imcms-w3c-text-validation-icon {
    background: url("../images/text_editor/ic_w3c.png") no-repeat center;
    background-size: 24px;
}

.w3c-validation-result .imcms-pop-up-modal__body {
    height: 85%;
    background-color: ghostwhite;
}

.w3c-validation-result .imcms-pop-up-modal__footer {
    padding: 15px 40px 15px 15px;
    width: 100%;
    height: 10%;
}

.w3c-validation-result .imcms-w3c-errors {
    padding: 20px;
}

.w3c-validation-result .imcms-w3c-errors h2 {
    padding-bottom: 10px;
    font-size: 30px;
}

.w3c-validation-result .imcms-w3c-error > div:first-child {
    font-weight: bold;
}

.w3c-validation-result .imcms-w3c-error > div:last-child,
.w3c-validation-result .imcms-w3c-error code {
    padding: 10px !important;
}

.w3c-validation-result {
    z-index: 65536;
}

.w3c-validation-result + .imcms-modal-layout {
    z-index: 65535;
}

.mce-tooltip {
    margin-left: 6px;
    margin-top: 8px;
}

.imcms-mce-fullscreen-inline {
    background-color: white;
    position: fixed !important;
    top: 32px !important;
    left: 0 !important;
    width: 100% !important;
    height: calc(100% - 33px) !important;
    z-index: 9400 !important;
    padding: 2% !important;
    overflow: auto !important;
    outline: none;
}

.title-url-text-editor {
    display: flex;
    color: #0b94d8;
    margin-left: 10%;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 15px;
    font-weight: 600;
}

.mce-fullscreen-toolbar {
    height: 33px !important;
    padding-top: 20px;
    position: fixed !important;
    top: 0 !important;
    left: 0 !important;
    width: 100% !important;
    z-index: 9500 !important;
}

.mce-fullscreen-toolbar .mce-tinymce.mce-tinymce-inline.mce-container.mce-panel {
    top: -1px !important;
    height: 30px !important;
    display: block !important;
}

.mce-fullscreen-toolbar .mce-tinymce.mce-tinymce-inline.mce-container.mce-panel .mce-container-body.mce-abs-layout,
.mce-fullscreen-toolbar .mce-tinymce.mce-tinymce-inline.mce-container.mce-panel .mce-container-body.mce-abs-layout .mce-toolbar-grp.mce-container.mce-panel.mce-abs-layout-item.mce-first.mce-last,
.mce-fullscreen-toolbar .mce-tinymce.mce-tinymce-inline.mce-container.mce-panel .mce-container-body.mce-abs-layout .mce-toolbar-grp.mce-container.mce-panel.mce-abs-layout-item.mce-first.mce-last .mce-container-body.mce-stack-layout {
    height: 30px !important;
    width: 100% !important;
}

.imcms-editor-content--text {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 16px;
    color: #000000;
}

textarea.imcms-editor-content--text[data-type="TEXT"],
input.imcms-editor-content--text[data-type="TEXT"] {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: unset;
}

textarea.imcms-editor-content--text[data-type="HTML"],
input.imcms-editor-content--text[data-type="HTML"] {
    font-size: 14px;
    font-family: monospace;
}

textarea.imcms-editor-content--text,
input.imcms-editor-content--text {
    resize: none;
    border: none;
    width: 100%;
    overflow: hidden;
}

.imcms-editor-content--text:focus {
    outline: 1px dotted #333;
}

.imcms-editor-content--text.mce-content-body > * {
    margin: 0;
}

.imcms-editor-content--text.mce-content-body {
    position: sticky;
}

.filtering-policies {
    z-index: 65536;
    margin-top: 2px;
    position: absolute;
    background-color: aliceblue;
    border: 1px solid #2faef4;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    border-top: none;
}

.filtering-policies .settings-section__setting {
    margin: 1px;
}

.mce-container-body.mce-abs-layout {
    overflow: unset;
}

.mce-container .filtering-policies {
    margin-top: 1px;
}

.mce-container .settings-section__setting--enabled {
    margin-left: 1px;
    background-color: #f0f0f0;
}

.filtering-policies__policy {
    display: flex;
}

.mce-container .settings-section__setting {
    padding: 5px;
    cursor: pointer;
}

